--- a/pelazem.rndgen/pelazem.rndgen.csproj
+++ b/pelazem.rndgen/pelazem.rndgen.csproj
@@ -11,6 +11,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>pelazem.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
