--- a/pelazem.rndgen/pelazem.rndgen.csproj
+++ b/pelazem.rndgen/pelazem.rndgen.csproj
@@ -11,10 +11,11 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>pelazem.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="pelazem.rng" Version="1.1.0" />
     <PackageReference Include="pelazem.util" Version="2.0.0" />
   </ItemGroup>
 
