--- a/pelazem.rndgen/pelazem.rndgen.csproj
+++ b/pelazem.rndgen/pelazem.rndgen.csproj
@@ -11,11 +11,13 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>pelazem.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
-    <Version>1.3.0</Version>
+    <Version>1.4.0</Version>
+    <LangVersion>latest</LangVersion>
+    <AssemblyVersion>1.4.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="pelazem.util" Version="2.0.0" />
+    <PackageReference Include="pelazem.util" Version="2.1.1" />
   </ItemGroup>
 
 </Project>
