--- a/pelazem.rndgen/pelazem.rndgen.csproj
+++ b/pelazem.rndgen/pelazem.rndgen.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,13 +11,13 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>pelazem.snk</AssemblyOriginatorKeyFile>
     <DelaySign>false</DelaySign>
-    <Version>1.4.4</Version>
+    <Version>1.4.5</Version>
     <LangVersion>latest</LangVersion>
-    <AssemblyVersion>1.4.4.0</AssemblyVersion>
+    <AssemblyVersion>1.4.5.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="pelazem.util" Version="2.4.0" />
+    <PackageReference Include="pelazem.util" Version="3.0.2" />
   </ItemGroup>
 
 </Project>
